# SurVTyper

./: CMakeLists.txt  Dockerfile  genotype_svs.cpp
.github/workflows/: docker-image.yml
